--- a/U3A_Attendance_System/Views/VenueListView.xaml
+++ b/U3A_Attendance_System/Views/VenueListView.xaml
@@ -32,7 +32,7 @@
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
                                 <Button Content="Edit" Width="80" cal:Message.Attach="ShowVenueEdit($dataContext)"></Button>
-                                <Button Content="Delete" Width="80"></Button>             
+                                <Button Content="Delete" Width="80" cal:Message.Attach="Delete($dataContext)"></Button>             
                             </StackPanel>
                         </DataTemplate>
 
