--- a/U3A_Attendance_System/Views/TabbedView.xaml
+++ b/U3A_Attendance_System/Views/TabbedView.xaml
@@ -12,11 +12,17 @@
             <TabItem Header="Course Descriptions">
                 <ContentControl Name="View1"/>
             </TabItem>
+                <TabItem Header=" | " IsEnabled="False">
+                </TabItem>
             <TabItem Header="Instances">
                 <ContentControl Name="View2" />
             </TabItem>
+            <TabItem Header=" | " IsEnabled="False">
+            </TabItem>
             <TabItem Header="Venues">
                 <ContentControl Name="View3" />
+            </TabItem>
+            <TabItem Header=" | " IsEnabled="False">
             </TabItem>
             <TabItem Header="Coordinators">
                 <ContentControl Name="View4" />
