Changed collection types.
Coordinator and CourseDescription Collection types have been fixed. Now
sortable and instantly updated when added a new record.

--- a/U3A_Attendance_System/Views/CourseDescriptionListView.xaml
+++ b/U3A_Attendance_System/Views/CourseDescriptionListView.xaml
@@ -40,7 +40,7 @@
                 </Style>
             </TextBox.Style>
         </TextBox>
-        <DataGrid Name="CourseDescriptions" HorizontalAlignment="Stretch" VerticalAlignment="Top" AutoGenerateColumns="False" Grid.Row="1" IsReadOnly="True">
+        <DataGrid x:Name="CourseDescriptions" HorizontalAlignment="Stretch"    VerticalAlignment="Top" AutoGenerateColumns="False" Grid.Row="1" IsReadOnly="True" >
             <DataGrid.Resources>
                 <ResourceDictionary>
                     <Style x:Key="NoFocusColumnStyle" TargetType="{x:Type DataGridCell}">
