--- a/U3A_Attendance_System/Views/MainView.xaml
+++ b/U3A_Attendance_System/Views/MainView.xaml
@@ -22,7 +22,9 @@
     </Window.Resources>
     <Controls:MetroWindow.WindowCommands>
         <Controls:WindowCommands>
-            <Button Content="home" cal:Message.Attach="ShowHome" />
+            <Button cal:Message.Attach="ShowHome">
+                <Image Source="home.png" Height="28" Width="28" VerticalAlignment="Center"></Image>
+            </Button>
         </Controls:WindowCommands>
     </Controls:MetroWindow.WindowCommands>
 
