--- a/U3A_Attendance_System/Views/WarningView.xaml
+++ b/U3A_Attendance_System/Views/WarningView.xaml
@@ -8,7 +8,7 @@
         WindowStartupLocation="CenterScreen"
         ShowMaxRestoreButton="False"
         ShowMinButton="False"
-        Title="DeleteView" Height="200" Width="450">
+        Title="DeleteView" Height="200" Width="450" ResizeMode="NoResize">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -38,8 +38,8 @@
         <Label Content="{Binding Label1}" Grid.Row="2" Grid.Column="2" VerticalAlignment="Bottom" />
         <Image Source="warningImage.png"  Grid.Column="1" Height="80" Width="80" Margin="0,9,21,10" Grid.RowSpan="2" Grid.Row="1" />
 
-        <Button Content="No" HorizontalAlignment="Left" VerticalAlignment="Center"  Click="Delete_Click"  Grid.Column="1" Grid.Row="6" />
-        <Button cal:Message.Attach="Delete" Content="Yes" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Click="Delete_Click" Grid.Row="6" />
+        <Button Content="No" HorizontalAlignment="Left" VerticalAlignment="Center"  Click="Delete_Click" Width="140"  Grid.Column="2" Grid.Row="3" Margin="151,15,0,10" />
+        <Button cal:Message.Attach="Delete" Content="Yes" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Width="140" Click="Delete_Click" Grid.Row="3" Margin="0,15,155,10" />
 
     </Grid>
 </Controls:MetroWindow>
