--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -20,20 +20,16 @@
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="180" />
-            <RowDefinition Height="150" />
-            <RowDefinition />
+            <RowDefinition Height="500" />
         </Grid.RowDefinitions>
+        <Label Content="Course Management" FontSize="30" Opacity="10" Foreground="#FFBEBEBE" HorizontalAlignment="Left" Width="287" Margin="0,0,0,447" />
+        <Label Content="{Binding CDTitle, Mode=TwoWay}"  HorizontalAlignment="Left" Margin="10,53,0,419" Width="287" Foreground="#FFBEBEBE" Padding="0"  />
         <!--Course Instance Management-->
-        <Grid Grid.Row="0">
+        <Grid Grid.Row="0" Margin="0,36,0,284">
             <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
+                <RowDefinition Height="52" />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <StackPanel Grid.Row="0" Orientation="Vertical">
-                <Label Content="Course Management" />
-                <Label Content="{Binding Path=CDTitle, Mode=TwoWay}" />
-            </StackPanel>
             <GroupBox Header="Course Information" Grid.Row="1">
 
                 <Grid>
@@ -80,8 +76,8 @@
             </GroupBox>
         </Grid>
         <!--Sessions Management-->
-        <Grid Grid.Row="1" IsEnabled="{Binding Path=IsSessionsEditEnabled}">
-            <GroupBox Header="Sessions &amp; Attendance">
+        <Grid IsEnabled="{Binding Path=IsSessionsEditEnabled}" Margin="0,216,0,134">
+            <GroupBox Header="Sessions &amp; Attendance" >
                 <!-- Sessions Specific -->
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -140,7 +136,8 @@
                 </Grid>
             </GroupBox>
         </Grid>
-        <Grid Grid.Row="2" IsEnabled="{Binding IsAttendanceEnabled}">
+
+        <Grid IsEnabled="{Binding IsAttendanceEnabled}" Margin="0,366,0,-36">
             <!--Attendance Related-->
             <Grid>
                 <Grid.RowDefinitions>
@@ -171,9 +168,8 @@
                     </GroupBox>
                 </Grid>
 
-                <Grid Grid.Row="1" Margin="0, 20, 0, 0">
-                    <DataGrid Name="Attendances" HeadersVisibility="None" Background="White">
-                    </DataGrid>
+                <Grid Grid.Row="1" Margin="0,20,0,-700">
+                    <DataGrid Name="Attendances" HeadersVisibility="None" Background="White" Margin="0,-15,0,0" EnableRowVirtualization="True" EnableColumnVirtualization="False"  />
                 </Grid>
             </Grid>
         </Grid>
