--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -114,7 +114,7 @@
                             <DatePicker Name="SessionStartDate" Grid.Column="0" Grid.Row="1" />
                             <Label Name="SessionStartDateDay" Grid.Column="1" Grid.Row="1" />
                             <ComboBox Name="SessionFrequency" DisplayMemberPath="Key" SelectedValuePath="Value" Grid.Column="2" Grid.Row="1"></ComboBox>
-                            <TextBox Name="SessionOccurances" Grid.Column="3" Grid.Row="1" />
+                            <TextBox Name="SessionOccurances" Grid.Column="3" Grid.Row="1" IsEnabled="{Binding Path=IsOccurancesEnabled}" />
                             <Button cal:Message.Attach="CreateSession(SessionFrequency.SelectedValue)" Content="Create" Grid.Column="4" Grid.Row="1" />
                         </Grid>
                     </GroupBox>
