More create buttons added to CI

--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -57,7 +57,7 @@
                     <Label Content="Region" Grid.Column="2" Grid.Row="0" />
                     <Label Content="Suburb" Grid.Column="3" Grid.Row="0" />
                     <Label Content="Venue" Grid.Column="4" Grid.Row="0" Margin="0,0,30,0" />
-                    <Label Content="Location" Grid.Column="5" Grid.Row="0" />
+                    <Label Content="Location" Grid.Column="5" Grid.Row="0" Margin="0,0,30,0" />
                     <Label Content="Course Code" Grid.Column="6" Grid.Row="0" />
 
 
@@ -75,7 +75,8 @@
                         <Button Name="Save" Content="Save" />
                     </StackPanel>
                     <Button Content="+" HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Height="14" cal:Message.Attach="AddNewCoordinator" ToolTip="Add Coordinator"/>
-                    <Button Content="+" HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Height="14" Grid.Column="4"/>
+                    <Button Content="+" HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Height="14" Grid.Column="4" cal:Message.Attach="AddNewVenue" ToolTip="Add Venue"/>
+                    <Button Content="+" HorizontalAlignment="Right" VerticalAlignment="Center" Width="25" Height="14" Grid.Column="5" cal:Message.Attach="AddNewLocation" ToolTip="Add Location" />
 
                 </Grid>
             </GroupBox>
