--- a/U3A_Attendance_System/Views/CoordinatorEditView.xaml
+++ b/U3A_Attendance_System/Views/CoordinatorEditView.xaml
@@ -39,13 +39,13 @@
     </Grid.RowDefinitions>
     
     <Label Content="Full Name" Grid.Column="1" Grid.Row="0" VerticalAlignment="Bottom" />
-    <TextBox x:Name="Name" TextWrapping="Wrap" Height="25" Grid.Column="1" Grid.Row="1"/>
+    <TextBox Name="Name" TextWrapping="Wrap" Height="25" Grid.Column="1" Grid.Row="1"/>
     <Label Content="Phone Number" Grid.Column="1" Grid.Row="2" VerticalAlignment="Bottom"/>
-    <TextBox x:Name="Phone" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="3" Height="25" />
+    <TextBox Name="Phone" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="3" Height="25" />
     <Label Content="Email" Grid.Column="1" Grid.Row="4" VerticalAlignment="Bottom"/>
-    <TextBox x:Name="Email" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5" Height="25" />
+    <TextBox Name="Email" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1" Grid.Row="5" Height="25" />
     <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Center"  Click="Update_Click"  Grid.Column="2" Grid.Row="6" />
-    <Button  x:Name="Update" Content="Save" HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Column="2" Click="Update_Click" Grid.Row="6" />  
+        <Button  x:Name="Update" Content="Save" HorizontalAlignment="Right" IsEnabled="{Binding IsSavingEnabled, Mode=TwoWay}" VerticalAlignment="Center" Grid.Column="2" Click="Update_Click" Grid.Row="6" />  
     </Grid>
 
 </Controls:MetroWindow>
