--- a/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
+++ b/U3A_Attendance_System/Views/CourseInstanceEditView.xaml
@@ -114,7 +114,7 @@
                             <Label Content="Start Date" Grid.Column="0" Grid.Row="0" />
 
                             <Label Content="Frequency" Grid.Column="2" Grid.Row="0" />
-                            <Label Content="Occurances" Grid.Column="3" Grid.Row="0" />
+                            <Label Content="Occurrences" Grid.Column="3" Grid.Row="0" />
 
                             <DatePicker Name="SessionStartDate" Grid.Column="0" Grid.Row="1" DisplayDateStart="{Binding StartDate}"/>
 
